--- a/src/KittopiaTech.csproj
+++ b/src/KittopiaTech.csproj
@@ -33,26 +33,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Assembly-CSharp.1.4.3\lib\net35\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\packages\Assembly-CSharp.1.4.4\lib\net35\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Kopernicus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\Kopernicus\build\GameData\Kopernicus\Plugins\Kopernicus.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Kopernicus.Components, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Kopernicus.Components.1.4.3.2\lib\net35\Kopernicus.Components.dll</HintPath>
+      <HintPath>..\..\Kopernicus\build\GameData\Kopernicus\Plugins\Kopernicus.Components.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Kopernicus.OnDemand, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Kopernicus.OnDemand.1.4.3.2\lib\net35\Kopernicus.OnDemand.dll</HintPath>
+      <HintPath>..\..\Kopernicus\build\GameData\Kopernicus\Plugins\Kopernicus.OnDemand.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Kopernicus.Parser, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\Kopernicus.Parser.1.4.3.2\lib\net35\Kopernicus.Parser.dll</HintPath>
+      <HintPath>..\..\Kopernicus\build\GameData\Kopernicus\Plugins\Kopernicus.Parser.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ModularFlightIntegrator, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ModularFlightIntegrator.1.2.5.0\lib\net35\ModularFlightIntegrator.dll</HintPath>
+      <HintPath>..\packages\ModularFlightIntegrator.1.2.5.1\lib\net35\ModularFlightIntegrator.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -60,11 +61,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\UnityEngine.1.4.3\lib\net35\UnityEngine.dll</HintPath>
+      <HintPath>..\packages\UnityEngine.1.4.4\lib\net35\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\UnityEngine.UI.1.4.3\lib\net35\UnityEngine.UI.dll</HintPath>
+      <HintPath>..\packages\UnityEngine.UI.1.4.4\lib\net35\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -95,6 +96,7 @@
     <Compile Include="UI\KopernicusEditor.cs" />
     <Compile Include="UI\CollectionEditor.cs" />
     <Compile Include="UI\PlanetSelector.cs" />
+    <Compile Include="UI\TaskListWindow.cs" />
     <Compile Include="UI\TypeSelector.cs" />
     <Compile Include="UI\ValueEditor.cs" />
     <Compile Include="UI\ValueEditors\BooleanEditor.cs" />
